# Touchpad-Indicator

./: .gitignore  README  README.md  extras-touchpad-indicator.desktop.in  helper.sh  msgfmt.py  patch  pyproject.toml  setup.py  tools.py
data/: 00_check_slimbook_touchpad_status  00_check_slimbook_touchpad_status_systemd  00_check_touchpad_status  00_check_touchpad_status_systemd  extras-touchpad-indicator.desktop  slimbook-touchpad-autostart.desktop  slimbook-touchpad.desktop  touchpad-indicator-autostart.desktop  touchpad-indicator.desktop
debian/: changelog  control  copyright  debhelper-build-stamp  files  install  postinst  postrm  rules  touchpad-indicator.postinst.debhelper  touchpad-indicator.prerm.debhelper  touchpad-indicator.substvars
po/: ar.po  ast.po  be.po  ca.po  cs.po  de.po  en.po  en_GB.po  es.po  eu.po  fi.po  fr.po  gl.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  languages.txt  lt.po  mn.po  ms.po  nl.po  pl.po  po.pot  pt.po  pt_BR.po  ro.po  ru.po  si.po  sk.po  sr.po  sv.po  tr.po  uk.po  vi.po  zh_CN.po  zh_HK.po  zh_TW.po
src/: CONSTANTS.py  KEYSYMDEF.py  change_touchpad_state.py  check_touchpad_status.py  comun.py  configurator.py  dconfigurator.py  device_list.py  do_it_after.py  doitinbackground.py  editgrub.py  idleobject.py  installdriver.py  keyboard_monitor.py  machine_information.py  monitor.py  monitor2.py  preferences_dialog.py  progreso.py  pynput  service.py  slimbooktouchpad.py  synclient.py  syndaemon.py  time_watcher.py  touchpad.py  touchpad_indicator.py  touchpadindicator.py  utils.py  watchdog.py  xconfigurator.py  (+2 more)
(+35 files in other folders)
