[project]
name = "touchpad-indicator"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Lorenzo Carbonell <atareao@atareao.es", email = "lorenzo.carbonell.cerezo@gmail.com" }
]
dependencies = [
    "pygobject>=3.50.0",
    "dbus-python>=1.3.2",
    "pyudev>=0.24.3",
    "evdev>=1.7.1",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/touchpad_indicator"]
